Closed Bug 1735613 Opened 4 years ago Closed 3 years ago

Fix android test NavigationDelegateTest#redirectIntentLoad when parent-controlled path is enabled in GeckoView

Categories

(Core :: DOM: Navigation, defect, P3)

Unspecified
Android
defect

Tracking

()

RESOLVED FIXED
97 Branch
Tracking Status
firefox95 --- wontfix
firefox96 --- wontfix
firefox97 --- fixed

People

(Reporter: annyG, Assigned: annyG)

References

(Blocks 1 open bug)

Details

Attachments

(2 files)

No description provided.

Pasting this comment for details:

I forgot to follow up here, but I had a meeting with nika and she pointed out how it could be related to an existing problem we know about where if a redirection fails to take place, we don't revert back the mChannelCreationURI in DocumentLoadListener (which Matt you mentioned in another bug). I briefly tried to add a channelCreationURI getter to nsIChannel where it returns the value of OriginalURI at the time AsyncOpen method was called, and even though this specific android test was fixed, there were a lot of other test issues that I need to look at.

Considering how we want to enable parent-controlled pref only if session history in parent is enabled, this test will not be an issue anymore since we don't have SHIP enabled on android. Therefore, I filed a follow up bug 1735613 to fix this test where I will address the problem of mChannelCreationURI not being reverted back.

The Bugbug bot thinks this bug is a defect, but please change it back in case of error.

Type: task → defect
Severity: -- → S3
Assignee: nobody → agakhokidze
OS: Unspecified → Android
Priority: -- → P3
Blocks: 1721217
Keywords: regression
No longer regressed by: 1721217
Summary: Fix android test NavigationDelegateTest#redirectIntentLoad when only parent-controlled pref is enabled → Fix android test NavigationDelegateTest#redirectIntentLoad when parent-controlled pref and session history in parent are enabled in GeckoView
Blocks: 1740589
Depends on: 1736121

<this was a draft comment which only got posted because I changed the title of the bug and didn't clear the comment text field>

Summary: Fix android test NavigationDelegateTest#redirectIntentLoad when parent-controlled pref and session history in parent are enabled in GeckoView → Fix android test NavigationDelegateTest#redirectIntentLoad when parent-controlled path is enabled in GeckoView
Attachment #9252390 - Attachment description: Bug 1735613 - Part 1: Remove the requirement for SHIP with parent controlled loads, r=peterv!,nika! → Bug 1735613 - Part 1: Remove the requirement for SHIP with parent controlled loads, r=peterv,nika
Attachment #9252391 - Attachment description: Bug 1735613 - Part 2: When redirecting in Document Channel, use the correct URI, r=nika! → WIP: Bug 1735613 - Part 2: When redirecting in Document Channel, use the correct URI, r=nika!
No longer depends on: 1736121
No longer blocks: 1740589
Attachment #9252390 - Attachment description: Bug 1735613 - Part 1: Remove the requirement for SHIP with parent controlled loads, r=peterv,nika → Bug 1735613 - Part 1: Remove the requirement for SHIP with parent controlled loads, r=peterv!,nika!
Attachment #9252391 - Attachment description: WIP: Bug 1735613 - Part 2: When redirecting in Document Channel, use the correct URI, r=nika! → Bug 1735613 - Part 2: When redirecting in Document Channel, use the correct URI, r=nika!
No longer blocks: 1721217
Depends on: 1721217
Pushed by agakhokidze@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/971d630dd09a Part 1: Remove the requirement for SHIP with parent controlled loads, r=peterv,nika https://hg.mozilla.org/integration/autoland/rev/e766f7d97e3e Part 2: When redirecting in Document Channel, use the correct URI, r=nika
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 97 Branch

Since the status are different for nightly and release, what's the status for beta?
For more information, please visit auto_nag documentation.

Blocks: 1748941
Blocks: 1686334
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: