Bug 1735613 - Part 1: Remove the requirement for SHIP with parent controlled loads, r=peterv,nika

Differential Revision: https://phabricator.services.mozilla.com/D132092