docshell/base/CanonicalBrowsingContext.cpp
@@ -2048,8 +2048,7 @@ bool CanonicalBrowsingContext::LoadInParent(nsDocShellLoadState* aLoadState,
   // We currently only support starting loads directly from the
   // CanonicalBrowsingContext for top-level BCs.
   if (!IsTopContent() || !GetContentParent() ||
-      !StaticPrefs::browser_tabs_documentchannel_parent_controlled() ||
-      !mozilla::SessionHistoryInParent()) {
+      !StaticPrefs::browser_tabs_documentchannel_parent_controlled()) {
     return false;
   }
 
@@ -2077,8 +2076,7 @@ bool CanonicalBrowsingContext::AttemptSpeculativeLoadInParent(
   // We currently only support starting loads directly from the
   // CanonicalBrowsingContext for top-level BCs.
   if (!IsTopContent() || !GetContentParent() ||
-      (StaticPrefs::browser_tabs_documentchannel_parent_controlled() &&
-       mozilla::SessionHistoryInParent())) {
+      (StaticPrefs::browser_tabs_documentchannel_parent_controlled())) {
     return false;
   }
 
@@ -2098,7 +2096,7 @@ bool CanonicalBrowsingContext::StartDocumentLoad(
   // If we're controlling loads from the parent, then starting a new load means
   // that we need to cancel any existing ones.
   if (StaticPrefs::browser_tabs_documentchannel_parent_controlled() &&
-      mozilla::SessionHistoryInParent() && mCurrentLoad) {
+      mCurrentLoad) {
     // Make sure we are not loading a javascript URI.
     MOZ_ASSERT(!aLoad->IsLoadingJSURI());
 
